--- a/G1213Dani/G1213Dani.uproject
+++ b/G1213Dani/G1213Dani.uproject
@@ -8,7 +8,10 @@
 		{
 			"Name": "G1213Dani",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG"
+			]
 		}
 	]
 }
