--- a/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-93J9VV0
 LastExecutedLaunchName=DESKTOP-93J9VV0
 LastExecutedPIEPreviewDevice=
@@ -150,8 +150,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213Dani.TimeStamp=2019.12.13-12.51.01
-G1213Dani.LastCompileMethod=Unknown
+G1213Dani.TimeStamp=2019.12.13-13.31.49
+G1213Dani.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.27-04.41.06
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.08.27-04.41.08
@@ -874,19 +874,129 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+BP_PlayerWidget_C.Appearance=True
+BP_PlayerWidget_C.Designer=True
+BP_PlayerWidget_C.Input=True
+BP_PlayerWidget_C.Interaction=True
+BP_PlayerWidget_C.Performance=True
+BP_PlayerWidget_C.Layout=True
+BP_PlayerWidget_C.Behavior=True
+BP_PlayerWidget_C.Render Transform=True
+BP_PlayerWidget_C.Clipping=True
+BP_PlayerWidget_C.Navigation=True
+BP_PlayerWidget_C.Localization=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.CameraSettings=True
+FirstPersonCharacter_C.CameraOptions=True
+FirstPersonCharacter_C.Tick=True
+FirstPersonCharacter_C.ComponentTick=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.Visualization=True
+FirstPersonCharacter_C.MotionController=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.ComponentReplication=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Variable=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.PostProcess=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.G1213DaniCharacter=True
+FirstPersonCharacter_C.Gameplay=True
+FirstPersonCharacter_C.Projectile=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+FirstPersonCharacter_C.Materials=True
+FirstPersonCharacter_C.Sockets=True
+FirstPersonCharacter_C.Events=True
+REINST_FirstPersonCharacter_C_55.Camera=True
+REINST_FirstPersonCharacter_C_55.Tick=True
+REINST_FirstPersonCharacter_C_55.G1213DaniCharacter=True
+REINST_FirstPersonCharacter_C_55.Gameplay=True
+REINST_FirstPersonCharacter_C_55.Projectile=True
+REINST_FirstPersonCharacter_C_55.Character=True
+REINST_FirstPersonCharacter_C_55.Pawn=True
+REINST_FirstPersonCharacter_C_55.Rendering=True
+REINST_FirstPersonCharacter_C_55.Replication=True
+REINST_FirstPersonCharacter_C_55.Input=True
+REINST_FirstPersonCharacter_C_55.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/BP_PLayerWidget.BP_PlayerWidget
+OpenAssetsAtExit=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MI_o
-MRUItem1=/Game/M_BaseMat
-MRUItem2=/Game/MI_Purple
-MRUItem3=/Game/MI_Cyen
-MRUItem4=/Game/MI_Yellow
-MRUItem5=/Game/MI_Red
-MRUItem6=/Game/MI_Blue
-MRUItem7=/Game/MI_Green
+MRUItem0=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/BP_PLayerWidget
+MRUItem2=/Game/MI_o
+MRUItem3=/Game/M_BaseMat
+MRUItem4=/Game/MI_Purple
+MRUItem5=/Game/MI_Cyen
+MRUItem6=/Game/MI_Yellow
+MRUItem7=/Game/MI_Red
+MRUItem8=/Game/MI_Blue
+MRUItem9=/Game/MI_Green
 
 [AssetEditorToolkitTabLocation]
 /Game/MI_Green.MI_Green=0
@@ -897,6 +1007,7 @@ MRUItem7=/Game/MI_Green
 /Game/MI_Cyan.MI_Cyan=0
 /Game/MI_Purple.MI_Purple=0
 /Game/MI_o.MI_o=0
+/Game/BP_PLayerWidget.BP_PlayerWidget=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -974,5 +1085,73 @@ MeshImportExport=../../../../../../Users/Daniel/Desktop/G1213Dani/Content/
 WorldRoot=../../../../../../Users/Daniel/Desktop/G1213Dani/Content/
 Level=../../../../../../Users/Daniel/Desktop/G1213Dani/Content/
 Project=C:/Program Files/Epic Games/UE_4.22/
+
+[WidgetTemplatesExpanded]
+Common=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+CurveVisibility=SelectedCurves
 
 
