--- a/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,12 +145,14 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213Dani.TimeStamp=2019.12.13-13.31.49
+G1213Dani.TimeStamp=2019.12.13-13.47.59
 G1213Dani.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.27-04.41.06
 PakFile.LastCompileMethod=Unknown
@@ -980,6 +982,37 @@ REINST_FirstPersonCharacter_C_55.Rendering=True
 REINST_FirstPersonCharacter_C_55.Replication=True
 REINST_FirstPersonCharacter_C_55.Input=True
 REINST_FirstPersonCharacter_C_55.Actor=True
+BP_UnluckyTrap_C.Tick=True
+BP_UnluckyTrap_C.UnluckyTrap=True
+BP_UnluckyTrap_C.Rendering=True
+BP_UnluckyTrap_C.Replication=True
+BP_UnluckyTrap_C.Input=True
+BP_UnluckyTrap_C.Actor=True
+BP_UnluckyTrap_C.Variable=True
+BP_UnluckyTrap_C.TransformCommon=True
+BP_UnluckyTrap_C.Sockets=True
+BP_UnluckyTrap_C.StaticMesh=True
+BP_UnluckyTrap_C.Physics=True
+BP_UnluckyTrap_C.Collision=True
+BP_UnluckyTrap_C.Lighting=True
+BP_UnluckyTrap_C.Tags=True
+BP_UnluckyTrap_C.ComponentReplication=True
+BP_UnluckyTrap_C.Cooking=True
+BP_UnluckyTrap_C.Events=True
+BP_UnluckyTrap_C.Materials=True
+REINST_BP_UnluckyTrap_C_75.TransformCommon=True
+REINST_BP_UnluckyTrap_C_75.StaticMesh=True
+REINST_BP_UnluckyTrap_C_75.Materials=True
+REINST_BP_UnluckyTrap_C_75.Physics=True
+REINST_BP_UnluckyTrap_C_75.Collision=True
+REINST_BP_UnluckyTrap_C_75.Lighting=True
+REINST_BP_UnluckyTrap_C_75.Rendering=True
+REINST_BP_UnluckyTrap_C_75.Tags=True
+REINST_BP_UnluckyTrap_C_75.Cooking=True
+REINST_BP_UnluckyTrap_C_75.UnluckyTrap=True
+REINST_BP_UnluckyTrap_C_75.Replication=True
+REINST_BP_UnluckyTrap_C_75.Input=True
+REINST_BP_UnluckyTrap_C_75.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -987,16 +1020,17 @@ OpenAssetsAtExit=/Game/BP_PLayerWidget.BP_PlayerWidget
 OpenAssetsAtExit=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/BP_PLayerWidget
-MRUItem2=/Game/MI_o
-MRUItem3=/Game/M_BaseMat
-MRUItem4=/Game/MI_Purple
-MRUItem5=/Game/MI_Cyen
-MRUItem6=/Game/MI_Yellow
-MRUItem7=/Game/MI_Red
-MRUItem8=/Game/MI_Blue
-MRUItem9=/Game/MI_Green
+MRUItem0=/Game/BP_UnluckyTrap
+MRUItem1=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/BP_PLayerWidget
+MRUItem3=/Game/MI_o
+MRUItem4=/Game/M_BaseMat
+MRUItem5=/Game/MI_Purple
+MRUItem6=/Game/MI_Cyen
+MRUItem7=/Game/MI_Yellow
+MRUItem8=/Game/MI_Red
+MRUItem9=/Game/MI_Blue
+MRUItem10=/Game/MI_Green
 
 [AssetEditorToolkitTabLocation]
 /Game/MI_Green.MI_Green=0
@@ -1086,6 +1120,9 @@ WorldRoot=../../../../../../Users/Daniel/Desktop/G1213Dani/Content/
 Level=../../../../../../Users/Daniel/Desktop/G1213Dani/Content/
 Project=C:/Program Files/Epic Games/UE_4.22/
 
+[MRU]
+MRUItem0=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+
 [WidgetTemplatesExpanded]
 Common=False
 Input=False
@@ -1153,5 +1190,8 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
+
+[PlacementMode]
+RecentlyPlaced=/Game/BP_UnluckyTrap.BP_UnluckyTrap;
 
 
