--- a/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213Dani.TimeStamp=2019.12.13-13.47.59
+G1213Dani.TimeStamp=2019.12.13-14.08.50
 G1213Dani.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.27-04.41.06
 PakFile.LastCompileMethod=Unknown
@@ -1013,24 +1013,57 @@ REINST_BP_UnluckyTrap_C_75.UnluckyTrap=True
 REINST_BP_UnluckyTrap_C_75.Replication=True
 REINST_BP_UnluckyTrap_C_75.Input=True
 REINST_BP_UnluckyTrap_C_75.Actor=True
+BP_RarestCandy_C.Tick=True
+BP_RarestCandy_C.RarestCandy=True
+BP_RarestCandy_C.Rendering=True
+BP_RarestCandy_C.Replication=True
+BP_RarestCandy_C.Input=True
+BP_RarestCandy_C.Actor=True
+BP_RarestCandy_C.Variable=True
+BP_RarestCandy_C.TransformCommon=True
+BP_RarestCandy_C.Sockets=True
+BP_RarestCandy_C.StaticMesh=True
+BP_RarestCandy_C.Physics=True
+BP_RarestCandy_C.Collision=True
+BP_RarestCandy_C.Lighting=True
+BP_RarestCandy_C.Tags=True
+BP_RarestCandy_C.ComponentReplication=True
+BP_RarestCandy_C.Cooking=True
+BP_RarestCandy_C.Events=True
+BP_RarestCandy_C.Materials=True
+REINST_BP_RarestCandy_C_92.Tick=True
+REINST_BP_RarestCandy_C_92.RarestCandy=True
+REINST_BP_RarestCandy_C_92.Rendering=True
+REINST_BP_RarestCandy_C_92.Replication=True
+REINST_BP_RarestCandy_C_92.Input=True
+REINST_BP_RarestCandy_C_92.Actor=True
+REINST_BP_RarestCandy_C_110.Tick=True
+REINST_BP_RarestCandy_C_110.RarestCandy=True
+REINST_BP_RarestCandy_C_110.Rendering=True
+REINST_BP_RarestCandy_C_110.Replication=True
+REINST_BP_RarestCandy_C_110.Input=True
+REINST_BP_RarestCandy_C_110.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/BP_PLayerWidget.BP_PlayerWidget
 OpenAssetsAtExit=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/BP_UnluckyTrap.BP_UnluckyTrap
+OpenAssetsAtExit=/Game/BP_RarestCandy.BP_RarestCandy
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_UnluckyTrap
-MRUItem1=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/BP_PLayerWidget
-MRUItem3=/Game/MI_o
-MRUItem4=/Game/M_BaseMat
-MRUItem5=/Game/MI_Purple
-MRUItem6=/Game/MI_Cyen
-MRUItem7=/Game/MI_Yellow
-MRUItem8=/Game/MI_Red
-MRUItem9=/Game/MI_Blue
-MRUItem10=/Game/MI_Green
+MRUItem0=/Game/BP_PLayerWidget
+MRUItem1=/Game/BP_RarestCandy
+MRUItem2=/Game/BP_UnluckyTrap
+MRUItem3=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem4=/Game/MI_o
+MRUItem5=/Game/M_BaseMat
+MRUItem6=/Game/MI_Purple
+MRUItem7=/Game/MI_Cyen
+MRUItem8=/Game/MI_Yellow
+MRUItem9=/Game/MI_Red
+MRUItem10=/Game/MI_Blue
+MRUItem11=/Game/MI_Green
 
 [AssetEditorToolkitTabLocation]
 /Game/MI_Green.MI_Green=0
@@ -1192,6 +1225,7 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_RarestCandy.BP_RarestCandy;
 RecentlyPlaced=/Game/BP_UnluckyTrap.BP_UnluckyTrap;
 
 
