--- a/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,8 +152,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213Dani.TimeStamp=2019.12.13-15.03.22
-G1213Dani.LastCompileMethod=External
+G1213Dani.TimeStamp=2019.12.13-15.20.59
+G1213Dani.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.27-04.41.06
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.08.27-04.41.08
@@ -1303,24 +1303,96 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+WBP_CubemonWidget_C.Appearance=True
+WBP_CubemonWidget_C.Designer=True
+WBP_CubemonWidget_C.Input=True
+WBP_CubemonWidget_C.Interaction=True
+WBP_CubemonWidget_C.Performance=True
+WBP_CubemonWidget_C.Layout=True
+WBP_CubemonWidget_C.Behavior=True
+WBP_CubemonWidget_C.Render Transform=True
+WBP_CubemonWidget_C.Clipping=True
+WBP_CubemonWidget_C.Navigation=True
+WBP_CubemonWidget_C.Localization=True
+BO_Cubemon_C.Tick=True
+BO_Cubemon_C.Rendering=True
+BO_Cubemon_C.Replication=True
+BO_Cubemon_C.Input=True
+BO_Cubemon_C.Actor=True
+BO_Cubemon_C.Variable=True
+BO_Cubemon_C.TransformCommon=True
+BO_Cubemon_C.Sockets=True
+BO_Cubemon_C.StaticMesh=True
+BO_Cubemon_C.Physics=True
+BO_Cubemon_C.Collision=True
+BO_Cubemon_C.Lighting=True
+BO_Cubemon_C.Tags=True
+BO_Cubemon_C.ComponentReplication=True
+BO_Cubemon_C.Cooking=True
+BO_Cubemon_C.Events=True
+BO_Cubemon_C.Materials=True
+BO_Cubemon_C.UserInterface=True
+BO_Cubemon_C.Interaction=True
+BO_Cubemon_C.Animation=True
+BO_Cubemon_C.Layers=True
+REINST_BO_Cubemon_C_45.Variable=True
+REINST_BO_Cubemon_C_45.TransformCommon=True
+REINST_BO_Cubemon_C_45.Sockets=True
+REINST_BO_Cubemon_C_45.Materials=True
+REINST_BO_Cubemon_C_45.UserInterface=True
+REINST_BO_Cubemon_C_45.Interaction=True
+REINST_BO_Cubemon_C_45.Animation=True
+REINST_BO_Cubemon_C_45.Layers=True
+REINST_BO_Cubemon_C_45.Physics=True
+REINST_BO_Cubemon_C_45.Collision=True
+REINST_BO_Cubemon_C_45.Rendering=True
+REINST_BO_Cubemon_C_45.Tags=True
+REINST_BO_Cubemon_C_45.ComponentReplication=True
+REINST_BO_Cubemon_C_45.Cooking=True
+REINST_BO_Cubemon_C_45.Events=True
+BO_Cubemon_C.ComponentTick=True
+REINST_BO_Cubemon_C_29.TransformCommon=True
+REINST_BO_Cubemon_C_29.StaticMesh=True
+REINST_BO_Cubemon_C_29.Materials=True
+REINST_BO_Cubemon_C_29.UserInterface=True
+REINST_BO_Cubemon_C_29.Tick=True
+REINST_BO_Cubemon_C_29.Interaction=True
+REINST_BO_Cubemon_C_29.ComponentTick=True
+REINST_BO_Cubemon_C_29.Animation=True
+REINST_BO_Cubemon_C_29.Layers=True
+REINST_BO_Cubemon_C_29.Physics=True
+REINST_BO_Cubemon_C_29.Collision=True
+REINST_BO_Cubemon_C_29.Lighting=True
+REINST_BO_Cubemon_C_29.Rendering=True
+REINST_BO_Cubemon_C_29.Tags=True
+REINST_BO_Cubemon_C_29.ComponentReplication=True
+REINST_BO_Cubemon_C_29.Variable=True
+REINST_BO_Cubemon_C_29.Cooking=True
+REINST_BO_Cubemon_C_29.Replication=True
+REINST_BO_Cubemon_C_29.Input=True
+REINST_BO_Cubemon_C_29.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/WBP_CubemonWidget.WBP_CubemonWidget
+OpenAssetsAtExit=/Game/BO_Cubemon.BO_Cubemon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_ResetPad
-MRUItem1=/Game/BP_PLayerWidget
-MRUItem2=/Game/BP_RarestCandy
-MRUItem3=/Game/BP_UnluckyTrap
-MRUItem4=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
-MRUItem5=/Game/MI_o
-MRUItem6=/Game/M_BaseMat
-MRUItem7=/Game/MI_Purple
-MRUItem8=/Game/MI_Cyen
-MRUItem9=/Game/MI_Yellow
-MRUItem10=/Game/MI_Red
-MRUItem11=/Game/MI_Blue
-MRUItem12=/Game/MI_Green
+MRUItem0=/Game/BO_Cubemon
+MRUItem1=/Game/WBP_CubemonWidget
+MRUItem2=/Game/BP_ResetPad
+MRUItem3=/Game/BP_PLayerWidget
+MRUItem4=/Game/BP_RarestCandy
+MRUItem5=/Game/BP_UnluckyTrap
+MRUItem6=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/MI_o
+MRUItem8=/Game/M_BaseMat
+MRUItem9=/Game/MI_Purple
+MRUItem10=/Game/MI_Cyen
+MRUItem11=/Game/MI_Yellow
+MRUItem12=/Game/MI_Red
+MRUItem13=/Game/MI_Blue
+MRUItem14=/Game/MI_Green
 
 [AssetEditorToolkitTabLocation]
 /Game/MI_Green.MI_Green=0
@@ -1333,6 +1405,7 @@ MRUItem12=/Game/MI_Green
 /Game/MI_o.MI_o=0
 /Game/BP_PLayerWidget.BP_PlayerWidget=0
 /Game/BP_ResetPad.BP_ResetPad=1
+/Game/WBP_CubemonWidget.WBP_CubemonWidget=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1483,8 +1556,16 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [PlacementMode]
+RecentlyPlaced=/Game/BO_Cubemon.BO_Cubemon;
 RecentlyPlaced=/Game/BP_ResetPad.BP_ResetPad;
 RecentlyPlaced=/Game/BP_RarestCandy.BP_RarestCandy;
 RecentlyPlaced=/Game/BP_UnluckyTrap.BP_UnluckyTrap;
+
+[DetailPropertyExpansion]
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
 
 
