+ up to number 8

--- a/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/G1213Dani/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,6 +83,7 @@ LastExecutedLaunchName=DESKTOP-93J9VV0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowPosition=(X=122,Y=34)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -152,7 +153,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-G1213Dani.TimeStamp=2019.12.13-15.20.59
+G1213Dani.TimeStamp=2019.12.13-15.50.49
 G1213Dani.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.08.27-04.41.06
 PakFile.LastCompileMethod=Unknown
@@ -1151,7 +1152,7 @@ Engine.Framerate=True
 Engine.Timecode=True
 HierarchicalLODSettings.HLODSystem=True
 InputSettings.Bindings=True
-InputSettings.ViewportProperties=True
+InputSettings.ViewportProperties=False
 InputSettings.Mobile=True
 InputSettings.Virtual Keyboard (Mobile)=True
 InputSettings.Console=True
@@ -1371,28 +1372,51 @@ REINST_BO_Cubemon_C_29.Cooking=True
 REINST_BO_Cubemon_C_29.Replication=True
 REINST_BO_Cubemon_C_29.Input=True
 REINST_BO_Cubemon_C_29.Actor=True
+REINST_BO_Cubemon_C_34.Variable=True
+REINST_BO_Cubemon_C_34.TransformCommon=True
+REINST_BO_Cubemon_C_34.Sockets=True
+REINST_BO_Cubemon_C_34.Materials=True
+REINST_BO_Cubemon_C_34.UserInterface=True
+REINST_BO_Cubemon_C_34.Interaction=True
+REINST_BO_Cubemon_C_34.Animation=True
+REINST_BO_Cubemon_C_34.Layers=True
+REINST_BO_Cubemon_C_34.Physics=True
+REINST_BO_Cubemon_C_34.Collision=True
+REINST_BO_Cubemon_C_34.Rendering=True
+REINST_BO_Cubemon_C_34.Tags=True
+REINST_BO_Cubemon_C_34.ComponentReplication=True
+REINST_BO_Cubemon_C_34.Cooking=True
+REINST_BO_Cubemon_C_34.Events=True
+FirstPersonProjectile_C.Tick=True
+FirstPersonProjectile_C.Rendering=True
+FirstPersonProjectile_C.Replication=True
+FirstPersonProjectile_C.Input=True
+FirstPersonProjectile_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/WBP_CubemonWidget.WBP_CubemonWidget
 OpenAssetsAtExit=/Game/BO_Cubemon.BO_Cubemon
+OpenAssetsAtExit=/Game/BP_PLayerWidget.BP_PlayerWidget
+OpenAssetsAtExit=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BO_Cubemon
-MRUItem1=/Game/WBP_CubemonWidget
-MRUItem2=/Game/BP_ResetPad
-MRUItem3=/Game/BP_PLayerWidget
-MRUItem4=/Game/BP_RarestCandy
-MRUItem5=/Game/BP_UnluckyTrap
-MRUItem6=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
-MRUItem7=/Game/MI_o
-MRUItem8=/Game/M_BaseMat
-MRUItem9=/Game/MI_Purple
-MRUItem10=/Game/MI_Cyen
-MRUItem11=/Game/MI_Yellow
-MRUItem12=/Game/MI_Red
-MRUItem13=/Game/MI_Blue
-MRUItem14=/Game/MI_Green
+MRUItem0=/Game/BP_PLayerWidget
+MRUItem1=/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonCPP/Blueprints/FirstPersonProjectile
+MRUItem3=/Game/BO_Cubemon
+MRUItem4=/Game/WBP_CubemonWidget
+MRUItem5=/Game/BP_ResetPad
+MRUItem6=/Game/BP_RarestCandy
+MRUItem7=/Game/BP_UnluckyTrap
+MRUItem8=/Game/MI_o
+MRUItem9=/Game/M_BaseMat
+MRUItem10=/Game/MI_Purple
+MRUItem11=/Game/MI_Cyen
+MRUItem12=/Game/MI_Yellow
+MRUItem13=/Game/MI_Red
+MRUItem14=/Game/MI_Blue
+MRUItem15=/Game/MI_Green
 
 [AssetEditorToolkitTabLocation]
 /Game/MI_Green.MI_Green=0
@@ -1406,6 +1430,7 @@ MRUItem14=/Game/MI_Green
 /Game/BP_PLayerWidget.BP_PlayerWidget=0
 /Game/BP_ResetPad.BP_ResetPad=1
 /Game/WBP_CubemonWidget.WBP_CubemonWidget=0
+/Game/FirstPersonCPP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1500,7 +1525,7 @@ Uncategorized=False
 User Created=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1564,8 +1589,11 @@ RecentlyPlaced=/Game/BP_UnluckyTrap.BP_UnluckyTrap;
 [DetailPropertyExpansion]
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
+
+[DetailCategoriesAdvanced]
+InputSettings.Bindings=True
 
 
